# grahspj

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: pr-benchmarks.yml  publish-pr-benchmarks.yml  tests.yml
LICENSES/: THIRD_PARTY_NOTICES.md
benchmarks/: README.md  grahspj_pr_benchmark.py
notebooks/: 01_example.ipynb  02_vizier_fairall9.ipynb  03_chimera_benchmarks.ipynb  04_fairall9_fake_photoz.ipynb  05_dr16q_bandwagon_svi.ipynb  06_ngc5548_bandwagon_joint_sed_spectra.ipynb  07_ngc4395_pox52_vizier.ipynb  08_adgd_alpha_ox.ipynb  09_Mass_retrieval_test.ipynb
src/: utils.py
src/grahspj/: __init__.py  benchmark.py  config.py  core.py  model.py  mplstyle.py  plotting.py  preload.py  run.py
src/grahspj/resources/filters/: README.md  filter_registry.txt
src/grahspj/resources/nebular/: README.md  nebular_lines.npz
src/grahspj/resources/templates/: Fe_d11-m20-20.5.txt  README.md  emission_line_table.formatted
src/grahspj/resources/templates/dale2014/: README.md
tests/: benchmark_fairall9_likelihood.py  test_benchmark.py  test_diffstar_host.py  test_imports.py  test_model_assembly.py  test_model_helpers.py  test_nebular.py  test_plotting.py
tests/fixtures/: cigale_v2025_1_dale2014_reference.npz  cigale_v2025_1_nebular_reference.npz
tools/: generate_cigale_nebular_resources.py
